--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 attrs==22.2.0
 autopep8==2.0.2
+contourpy==1.0.7
+cycler==0.11.0
 exceptiongroup==1.1.0
+fonttools==4.38.0
 iniconfig==2.0.0
+kiwisolver==1.4.4
+matplotlib==3.7.1
 numpy==1.24.2
 packaging==23.0
 pandas==1.5.3
+Pillow==9.4.0
 pluggy==1.0.0
 pycodestyle==2.10.0
+pyparsing==3.0.9
 pytest==7.2.1
 python-dateutil==2.8.2
 pytz==2022.7.1
+seaborn==0.12.2
 six==1.16.0
 tomli==2.0.1
